<resources>
    <string name="app_name">Guitar</string>
    <string name="title_activity_settings_guitar">Settings</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="song_now">"Now is song: "</string>
    <string name="name_song">Jméno písně</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_drawer">drawer</string>
    <string name="user_name">User name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_instrument">Change sound</string>
    <string name="action_preview_song">Listen song</string>
    <string name="title_activity_settings2">Settings</string>
    <string-array name="list_songs">
        <item>Pro Elišku</item>
        <item>Ovčáci čtveráci</item>
        <item>Toccata D moll</item>
    </string-array>
    <string-array name="list_instruments">
        <item>Kytara</item>
        <item>Basa</item>
        <item>Flétna</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="speed">
        <item>100</item>
        <item>200</item>
        <item>300</item>
    </string-array>
    <string-array name="pref_speed_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="action_play_pause_try_song">Try play</string>
    <string name="action_play_chords">Play chords</string>
    <string name="action_try_song">Play song</string>
    <string name="choice_Song">Choice song</string>
    <string name="choice_instrument">Choice Instrument</string>
    <string name="choice_song">Choice song</string>
    <string name="choice_speed">Choice speed</string>
    <string name="error_field_required">Chyba|: toto pole je potřeba vyplnit.</string>
    <string name="error_incorrect_password">Chyba: nesprávné heslo</string>
    <string name="who_are_you">Hello. Who are you?</string>
    <string name="i_am_teacher">I am teacher</string>
    <string name="i_am_guitarist">I am guitarist</string>
    <string name="to_login">Log in</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="open_file">Open file</string>
    <string name="import_file">Import file</string>
    <string name="open_midi">Open midi file</string>
    <string name="play_midi">Play midi file</string>
    <string name="stop_midi">Stop playing midi file</string>
    <string name="read_midi">Read midi file</string>
    <string name="test_song_midi">Test song from midi file</string>
    <string name="write_midi">Write midi as song</string>
    <string name="preview">Preview</string>
    <string name="name_file">Name file:</string>
    <string name="warning_sound_half_second">After counting record sound on length 1/2 second.</string>
    <string name="to_preview">Preview</string>
    <string name="save">Save</string>
    <string name="change_name_teacher">Change name teacher</string>
    <string name="change_pass_teacher">Change password teacher</string>
    <string name="edit_user">Edit (new) user</string>
    <string name="erase_user">Erase user</string>
    <string name="record_sound">Record sound</string>
    <string name="midi_player">Work with midi</string>
    <string name="import_files">Import files</string>
    <string name="factory_reset">Faktory reset</string>
    <string name="try_song">Try song</string>
    <string name="coins">Coins</string>
    <string name="change_tonality">Change tonality</string>
    <string name="name_guitarist">Name guitarist</string>
    <string name="pass_guitarist">Password guitarist</string>
    <string name="coin_value">Coin value</string>
    <string name="max_level">Max level</string>
    <string name="current_level">Current level</string>
    <string name="allowed_songs">Allowed songs</string>
    <string name="current_song">Current song</string>
    <string name="allowed_instruments">Allowed instruments</string>
    <string name="current_instrument">Current instrument</string>
    <string name="current_fret">Current fret</string>
    <string name="current_background">Current background</string>
    <string name="current_strings">Current strings</string>
    <string name="allowed_backgrounds">Allowed backgrounds</string>
    <string name="allowed_frets">Allowed frets</string>
    <string name="allowed_strings">Allowed strings</string>
    <string name="playing_tones">Playing tones</string>
    <string name="summary_playing_tones">To stop playing tones at the same time</string>
    <string name="choice_activity">Choise activity</string>
    <string name="warning_wrong_name_pass">Wrong name or password</string>
    <string name="warning_first_create_account">First you must create guitarist account in teacher section</string>
    <string name="only_midi_files">Only files *.midi *.mid</string>
    <string name="select_directory">Select directory</string>
    <string name="only_png_files">Only files *.png</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="frets">Frets</string>
    <string name="strings">Strings</string>
    <string name="warning_file">File</string>
    <string name="warning_was_copy">copied.</string>
    <string name="warning_files_copy_to_folder">FIles copied to folder:</string>
    <string name="warning_cant_copy">cant_copy.</string>
    <string name="choice_type_files">Choice type of files</string>
    <string name="cancel">Cancel</string>
    <string name="warning_wrong_format_string">" is wrong format for real file strings (for example string1, string2, string3, string4..."</string>
    <string name="warning_no_strings_file">There isnt all strings files in folder. This folder must contains 6 files (for example string1, string2, string3...</string>
    <string name="warning_name_uses">This name is uses. Do you copy file which is used already? Rename its.</string>
    <string name="choice">Choice</string>
    <string name="empty_strings">Empty strings</string>
    <string name="play">"Play "</string>
    <string name="warning_first_stop_song">First stop song.</string>
    <string name="play_order">Play!</string>
    <string name="stop_order">Stop!</string>
    <string name="playing">Playing...</string>
    <string name="warning_instrument_change">Instrument change on:</string>
    <string name="name_author">Name of author</string>
    <string name="warning_field_not_empty">Field must not empty.</string>
    <string name="warning_song">Song</string>
    <string name="warning_copied">copied.</string>
    <string name="warning_didnt_copy.">didnt copy.</string>
    <string name="ok">Ok</string>
    <string name="create">Create</string>
    <string name="log_in">Log in</string>
    <string name="warning_new_name">New name and password saved.</string>
    <string name="new_name">New name</string>
    <string name="new_pass">New password</string>
    <string name="choice_user">Choice user</string>
    <string name="warning_erase_user">"Erase user "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_user">New User</string>
    <string name="illegal_name">Illegal name</string>
    <string name="erase_settings">Erase all settings</string>
    <string name="warning_erase_settings">Do you want erase all settings?</string>
    <string name="warning_save_new_name">saved as new name.</string>
    <string name="posibility_recording">Posibilities recording</string>
    <string name="warning_nothing_record">Just now nothing record.</string>
    <string name="warning_file_exists">File with same name now exists. Do you want rewrite?</string>
    <string name="warning_prepare_recording">Prepare recording...</string>
    <string name="warning_recording">Recording...</string>
    <string name="recording_finish">Recording finish</string>
    <string name="wrong_number">Wrong number</string>
    <string name="wrong_name_background">Wrong name background</string>
    <string name="wrong_name_frets">Wrong name frets</string>
    <string name="wrong_name_songs">Wrong name songs</string>
    <string name="wrong_name_instruments">Wrong name instruments</string>
    <string name="wrong_name_strings">Wrong name strings</string>
    <string name="erase">Erase</string>
    <string name="warning_wrong_backgrounds">"We find this wrong name backgrounds: "</string>
    <string name="warning_wrong_frets">We find this wrong name frets:</string>
    <string name="warning_wrong_songs">We find this wrong name songs:</string>
    <string name="warning_wrong_instruments">We find this wrong name intruments:</string>
    <string name="warning_wrong_strings">We find this wrong name strings:</string>
    <string name="beginner">Beginner</string>
    <string name="expert">Expert</string>
    <string name="professional">Professional</string>
    <string name="genius">Genius</string>
    <string name="song">Song</string>
    <string name="price">Price:</string>
    <string name="open_shop">Open shop</string>
    <string name="save_shop">Save changing item in the shop</string>
    <string name="contains_shop">Shop contains this item.</string>
    <string name="beginner_plus">Beginner plus</string>
    <string name="expert_plus">Expert plus</string>
    <string name="professional_plus">Professional plus</string>
    <string name="genius_plus">Genius plus</string>
    <string name="champion_plus">Champion plus</string>
    <string name="champion_minus">Champion minus</string>
    <string name="genius_minus">Genius minus</string>
</resources>