<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lubin.guitar.Teacher.TeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/change_name_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_name_teacher" />

        <Button
            android:id="@+id/change_pass_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_teacher" />

        <Button
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_user" />

        <Button
            android:id="@+id/erase_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/erase_user" />

        <Button
            android:id="@+id/record_sound_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_sound" />

        <Button
            android:id="@+id/midi_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/midi_player" />

        <Button
            android:id="@+id/import_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_files" />

        <Button
            android:id="@+id/edit_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit shop" />

        <Button
            android:id="@+id/factory_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/factory_reset" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
