<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings_menu"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        android:icon="@mipmap/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/btn_change_instrument"
        android:orderInCategory="2"
        android:title="@string/action_change_instrument"
        android:icon="@mipmap/music_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/preview_song"
        android:orderInCategory="4"
        android:icon="@mipmap/guitar_acoustic_white"
        android:title="@string/action_preview_song"
        app:showAsAction="always" />
    <item
        android:id="@+id/play_chord"
        android:orderInCategory="5"
        android:title="@string/action_play_chords"
        android:icon="@mipmap/ic_table_large_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/open_shop"
        android:orderInCategory="6"
        android:title="@string/open_shop"
        android:icon="@mipmap/shop"
        app:showAsAction="never" />

</menu>
