<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/name_song"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:title="@string/song" />



    <ListPreference
        android:defaultValue="1"
        android:entries="@array/song"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/choice_song" />


    <ListPreference
        android:defaultValue="1"
        android:entries="@array/speed"
        android:entryValues="@array/pref_speed_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/choice_speed" />

</PreferenceScreen>
