<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Midi.MidiActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="593dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="137dp">

        <TextView
            android:id="@+id/label_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/open_midi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_midi" />

        <Button
            android:id="@+id/play_midi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_midi" />

        <Button
            android:id="@+id/stop_midi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_midi" />

        <Button
            android:id="@+id/read_midi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_midi" />

        <Button
            android:id="@+id/test_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_song_midi" />

        <Button
            android:id="@+id/write_midi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_midi" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>