<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop.EditShopActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/change_type_file_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_open_file_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_file" />

                <Switch
                    android:id="@+id/switch_in_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contains_shop" />

                <TextView
                    android:id="@+id/lbl_name_file_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lbl_price_text_shop"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="60"
                        android:gravity="center"
                        android:textColor="@color/colorRed"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:text="@string/price"/>

                    <TextView
                        android:id="@+id/lbl_price_item_shop"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:gravity="center"
                        android:textColor="@color/colorRed"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/image_file_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@color/colorGray" />

                <Button
                    android:id="@+id/try_song_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_preview_song" />

                <Button
                    android:id="@+id/btn_save_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_shop" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>