<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lubin.guitar.Teacher.TeacherAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/accTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/teacher" />

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/name" />

        <EditText
            android:id="@+id/AccNameTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/lbl_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/password" />

        <EditText
            android:id="@+id/AccountPassTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnAccountTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to_login" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
